--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "playwright-smoke-test",
   "version": "1.0.0",
-  "type": "module",
   "description": "",
-  "main": "src/main.js",
   "scripts": {
-    "start": "node src/main.js",
+    "start": "cucumber-js --require-module ts-node/register --require step-definitions/**/*.ts --require hooks/**/*.ts --require world/world.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +17,10 @@
   },
   "homepage": "https://github.com/znut/playwright-smoke-test#readme",
   "dependencies": {
-    "playwright": "^0.9.24"
+    "@types/cucumber": "^6.0.1",
+    "cucumber": "^6.0.5",
+    "playwright": "^1.3.0",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.7"
   }
 }
